# invitation-core

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: 01_basic_example.py  02_fastapi_example.py
scripts/: setup_test_db.py
src/invitation_core/: __init__.py
src/invitation_core/adapters/: __init__.py
src/invitation_core/adapters/event_buses/: __init__.py  memory.py
src/invitation_core/adapters/repositories/: __init__.py  memory.py  mongodb.py  sqlalchemy.py
src/invitation_core/domain/: __init__.py  exceptions.py  models.py  services.py  value_objects.py
src/invitation_core/dto/: __init__.py  requests.py  responses.py
src/invitation_core/events/: __init__.py  events.py
src/invitation_core/interfaces/: __init__.py  event_bus.py  repository.py
tests/: conftest.py
tests/contracts/: test_repository_contract.py
tests/integration/: test_mongodb_repository.py  test_sqlalchemy_repository.py
tests/unit/adapters/: test_event_bus.py
tests/unit/domain/: test_models.py  test_services.py  test_value_objects.py
tests/unit/dto/: test_requests.py
